--- a/deploy/frontend/index.html
+++ b/deploy/frontend/index.html
@@ -871,9 +871,9 @@
                                                 <div class="mb-3" v-if="newAgent.rebate_mode === 'percentage'">
                                                     <label class="form-label">退水比例 (%)</label>
                                                     <input type="number" class="form-control" v-model="newAgent.rebate_percentage" 
-                                                           step="0.01" min="0" :max="getMaxRebateForMarket(newAgent.market_type)" required>
+                                                           step="0.01" min="0" :max="getMaxRebateForMarket(currentManagingAgent.market_type || 'D')" required>
                                                     <small class="form-text text-muted">
-                                                        可设定范围：0% - {{ getMaxRebateForMarket(newAgent.market_type) }}% ({{ newAgent.market_type }}盤限制)
+                                                        可设定范围：0% - {{ getMaxRebateForMarket(currentManagingAgent.market_type || 'D') }}% ({{ getMarketInfo(currentManagingAgent.market_type || 'D').name }}限制)
                                                     </small>
                                                 </div>
                                                 <div class="mb-3">
@@ -888,7 +888,7 @@
                                                     </div>
                                                     <div class="card-body">
                                                         <ul class="mb-0 small">
-                                                            <li><strong>全拿所有退水：</strong>該代理获得所有可得退水 ({{ ((currentManagingAgent.rebate_percentage || currentManagingAgent.max_rebate_percentage || 0.041) * 100).toFixed(1) }}%)</li>
+                                                            <li><strong>全拿所有退水：</strong>該代理获得所有可得退水 ({{ ((currentManagingAgent.rebate_percentage || currentManagingAgent.max_rebate_percentage || (currentManagingAgent.market_type === 'A' ? 0.011 : 0.041)) * 100).toFixed(1) }}%)</li>
                                                             <li><strong>设定具體比例：</strong>該代理获得指定比例的退水</li>
                                                             <li><strong>全退給下級：</strong>該代理不获得退水，全部給下級代理</li>
                                                         </ul>
