--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -1576,14 +1576,34 @@
                                         <tr v-for="agent in reportData.reportData" :key="agent.username">
                                             <td class="text-center">{{ agent.level }}</td>
                                             <td class="text-center">
+                                                <!-- 自己的統計顯示特殊樣式 -->
+                                                <div v-if="agent.isSelf" class="d-flex align-items-center justify-content-center">
+                                                    <span class="fw-bold text-primary me-2">
+                                                        {{ agent.username }}
+                                                        <small class="text-muted">({{ agent.memberCount }}會員)</small>
+                                                    </span>
+                                                    <button v-if="agent.hasDownline" 
+                                                            class="btn btn-outline-primary btn-sm" 
+                                                            @click="viewAgentMembers(agent)"
+                                                            title="查看會員">
+                                                        <i class="fas fa-users"></i>
+                                                    </button>
+                                                </div>
                                                 <!-- 有下級的代理顯示為可點擊按鈕 -->
-                                                <button v-if="agent.hasDownline" 
-                                                        class="btn btn-link p-0 text-decoration-none fw-bold" 
-                                                        @click="enterAgentReport(agent)"
-                                                        :class="agent.betCount > 0 ? 'text-primary' : 'text-muted'">
-                                                    {{ agent.username }}
-                                                    <i class="fas fa-chevron-right ms-1 small"></i>
-                                                </button>
+                                                <div v-else-if="agent.hasDownline" class="d-flex align-items-center justify-content-center">
+                                                    <button class="btn btn-link p-0 text-decoration-none fw-bold me-2" 
+                                                            @click="enterAgentReport(agent)"
+                                                            :class="agent.betCount > 0 ? 'text-primary' : 'text-muted'">
+                                                        {{ agent.username }}
+                                                        <i class="fas fa-chevron-right ms-1 small"></i>
+                                                    </button>
+                                                    <button v-if="agent.hasMember" 
+                                                            class="btn btn-outline-secondary btn-sm" 
+                                                            @click="viewAgentMembers(agent)"
+                                                            title="查看會員">
+                                                        <i class="fas fa-users"></i>
+                                                    </button>
+                                                </div>
                                                 <!-- 沒有下級的代理顯示為純文字 -->
                                                 <span v-else class="fw-bold text-muted">
                                                     {{ agent.username }}
