修復退水分配和代理層級顯示問題
1. 退水分配機制修復：
   - 修復全退下級模式的退水分配邏輯
   - 添加明確的跳過日誌說明
   - 確保退水正確傳遞給上級代理

2. 代理層級顯示修復：
   - 擴展SQL CASE語句支持10-15級代理
   - 使用CONCAT動態生成層級名稱
   - 消除undefined級代理顯示問題

3. 會員列表增強：
   - 提供完整的代理信息映射
   - 添加代理層級名稱顯示
   - 改善前端視覺呈現

修復範圍：
- backend.js, deploy/backend.js (退水分配)
- agentBackend.js, deploy/agentBackend.js (代理層級)
- agent/frontend/index.html (前端顯示)

--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -1125,7 +1125,10 @@
                                             <td>{{ member.id }}</td>
                                             <td>{{ member.username }}</td>
                                             <td v-if="memberViewMode === 'downline'">
-                                                <span class="badge bg-secondary">{{ member.agentUsername || '未知代理' }}</span>
+                                                <div class="d-flex flex-column">
+                                                    <span class="badge bg-secondary">{{ member.agentUsername || '未知代理' }}</span>
+                                                    <small class="text-muted">{{ member.agentLevelName || '未知級別' }}</small>
+                                                </div>
                                             </td>
                                             <td>{{ formatMoney(member.balance) }}</td>
                                             <td>
