修復A盤D盤龍虎賠率顯示0.0問題
問題根源：updateOddsDisplay()方法中的龍虎賠率更新邏輯錯誤
- 原邏輯可能將dragonTiger從對象{dragon: 1.9, tiger: 1.9}變成數字1.9
- 導致模板中的odds.dragonTiger.dragon返回undefined
- formatOdds(undefined)返回"0.00"

修復方案：
- 確保dragonTiger始終保持對象結構{dragon: config.dualOdds, tiger: config.dualOdds}
- 移除會破壞對象結構的邏輯分支
- A盤應顯示1.90，D盤應顯示1.88

測試驗證：
- 前端配置檢查顯示3個龍虎配置正確存在
- 修復後A盤會員登錄應看到龍虎賠率1.90
- D盤會員登錄應看到龍虎賠率1.88

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6726,16 +6726,11 @@
                         }
                     });
                     
-                    // 更新龙虎赔率
-                    if (this.odds.dragonTiger) {
-                        if (typeof this.odds.dragonTiger === 'object') {
-                            Object.keys(this.odds.dragonTiger).forEach(type => {
-                                this.odds.dragonTiger[type] = config.dualOdds;
-                            });
-                        } else {
-                            this.odds.dragonTiger = config.dualOdds;
-                        }
-                    }
+                    // 更新龙虎赔率 - 確保始終保持對象結構
+                    this.odds.dragonTiger = {
+                        dragon: config.dualOdds,
+                        tiger: config.dualOdds
+                    };
                     
                     // 更新冠亚和大小单双赔率
                     if (this.odds.sumValue) {
