--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -1476,6 +1476,15 @@
                                                         <i class="fas fa-chevron-right ms-1 small"></i>
                                                     </button>
                                                 </div>
+                                                <!-- 如果是會員且有下注記錄，顯示為可點擊查看下注記錄 -->
+                                                <div v-else-if="item.userType === 'member' && item.betCount > 0" class="d-flex align-items-center justify-content-center">
+                                                    <button class="btn btn-link p-0 text-decoration-none fw-bold text-success" 
+                                                            @click="viewMemberBets(item.username)" 
+                                                            title="點擊查看下注記錄">
+                                                        {{ item.username }}
+                                                        <i class="fas fa-list ms-1 small"></i>
+                                                    </button>
+                                                </div>
                                                 <!-- 其他情況顯示為普通文字 -->
                                                 <div v-else class="d-flex align-items-center justify-content-center">
                                                     <span class="fw-bold" :class="item.userType === 'agent' ? 'text-primary' : 'text-success'">
@@ -1595,12 +1604,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="mt-2 p-2 bg-success bg-opacity-10 rounded">
-                                    <small class="text-success">
-                                        <i class="fas fa-check-circle me-1"></i>
-                                        <strong>簡化說明：</strong> 此報表顯示您直接創建的所有代理和會員，總計就是您的實際業績，清晰明瞭無重複計算。
-                                    </small>
-                                </div>
+
                             </div>
                         </div>
                     </div>
