實現下注記錄期間查詢功能
新增功能：
1. 下注記錄頁面新增期間查詢功能
   - 新增開始日期和結束日期欄位
   - 提供快捷期間選項（今天、昨天、本週、本月、上月）
   - 保持原有單日查詢功能的相容性

2. 報表整合功能
   - 從報表查詢點擊會員名進入下注記錄時，自動使用相同期間範圍
   - 實現跨頁面的期間資訊傳遞

3. 後端API增強
   - /bets API支持startDate和endDate參數
   - 智能日期篩選邏輯（單日查詢優先）

4. 用戶體驗優化
   - 重新設計篩選區域布局（5列布局）
   - 提供直觀的期間下拉選單
   - 成功提示包含期間資訊

技術實現：
- 前端：擴展betFilters數據結構，新增setBetDateRange函數
- 後端：增強SQL查詢邏輯支持期間查詢
- 整合：修改viewMemberBets函數支持期間參數傳遞
- 相容性：保持所有原有功能正常運作

修改文件：
- agent/frontend/js/main.js - 新增期間查詢邏輯
- agent/frontend/index.html - 重新設計篩選界面
- deploy/frontend/js/main.js - 同步主版本修改
- deploy/frontend/index.html - 同步主版本修改
- agentBackend.js - 擴展API支持期間查詢
- deploy/agentBackend.js - 同步主版本修改

--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -1479,7 +1479,7 @@
                                                 <!-- 如果是會員且有下注記錄，顯示為可點擊查看下注記錄 -->
                                                 <div v-else-if="item.userType === 'member' && item.betCount > 0" class="d-flex align-items-center justify-content-center">
                                                     <button class="btn btn-link p-0 text-decoration-none fw-bold text-success" 
-                                                            @click="viewMemberBets(item.username)" 
+                                                            @click="viewMemberBets(item.username, {startDate: reportFilters.startDate, endDate: reportFilters.endDate})" 
                                                             title="點擊查看下注記錄">
                                                         {{ item.username }}
                                                         <i class="fas fa-list ms-1 small"></i>
@@ -2101,13 +2101,38 @@
                                         </option>
                                     </select>
                                 </div>
-                                <div class="col-md-3">
+                                <div class="col-md-2">
                                     <label class="form-label">日期</label>
                                     <input type="date" class="form-control" v-model="betFilters.date">
                                 </div>
-                                <div class="col-md-3">
+                                <div class="col-md-2">
+                                    <label class="form-label">開始日期</label>
+                                    <input type="date" class="form-control" v-model="betFilters.startDate">
+                                </div>
+                                <div class="col-md-2">
+                                    <label class="form-label">結束日期</label>
+                                    <input type="date" class="form-control" v-model="betFilters.endDate">
+                                </div>
+                                <div class="col-md-2">
                                     <label class="form-label">期数</label>
                                     <input type="text" class="form-control" placeholder="输入期数" v-model="betFilters.period">
+                                </div>
+                                <div class="col-md-2">
+                                    <label class="form-label">快捷選項</label>
+                                    <div class="btn-group w-100" role="group">
+                                        <button type="button" class="btn btn-outline-secondary dropdown-toggle" data-bs-toggle="dropdown">
+                                            期間
+                                        </button>
+                                        <ul class="dropdown-menu">
+                                            <li><a class="dropdown-item" href="#" @click.prevent="setBetDateRange('today')">今天</a></li>
+                                            <li><a class="dropdown-item" href="#" @click.prevent="setBetDateRange('yesterday')">昨天</a></li>
+                                            <li><a class="dropdown-item" href="#" @click.prevent="setBetDateRange('thisWeek')">本週</a></li>
+                                            <li><a class="dropdown-item" href="#" @click.prevent="setBetDateRange('thisMonth')">本月</a></li>
+                                            <li><a class="dropdown-item" href="#" @click.prevent="setBetDateRange('lastMonth')">上月</a></li>
+                                            <li><hr class="dropdown-divider"></li>
+                                            <li><a class="dropdown-item" href="#" @click.prevent="setBetDateRange('clear')">清除</a></li>
+                                        </ul>
+                                    </div>
                                 </div>
                                 <div class="col-md-12 d-flex align-items-end">
                                     <button class="btn btn-primary me-2" @click="searchBets">
